NTI-5793, NTI-5799 Fix menu z-index, dismiss on item click

--- a/src/main/resources/scss/debris/profile/components/_head.scss
+++ b/src/main/resources/scss/debris/profile/components/_head.scss
@@ -144,6 +144,10 @@
 
 }
 
+.profile-more-items-menu.flyout {
+	z-index: 1000;
+}
+
 .profile-nav-sub-items {
 	width: calc(100vw - 2.15rem);
 	max-width: 800px;
